# taqui

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.prod.yaml  compose.yaml  generate_key.sh  jwt_private.pem  jwt_public.pem
.sqlx/: query-03204c1b5f82555fd0a102dba1496769dceba95d8a042b5c6df5fc1e4ae5def4.json  query-07c2505c3183b99f28f4023d2c2da0556ca4010503aefa49f28377a8c580d49a.json  query-1c85648446f7dd57c55176cae45c2adb78465b97ccf70d03843db8e832a08f4f.json  query-3e755a1bf2c01a7398ef28f60dc86eb461eee1414fc03a62a935d3b3f6d539c7.json  query-410f49d7d32ce0626ca04e53ebc66d0b97bfe3485be1747cc0921f4e867798d1.json  query-468558a0aa99db37e451632ff8d08c6e9b12c486800b2eb3bfbfc33bbaf32f88.json  query-4fe8c3c5c43cb0b65ba89848e81408c538a5ede2fbb2558fecfc782938abcd5b.json  query-549126474299aa2e93b61d50a23f4f86c18c544f61c513679dffb78879f7804a.json  query-6cb94e81c6b5a343c8fd6cb46486429f8b6380823a3001582a90b8c21283a017.json  query-76a3e9af151d7c03a9f0bb3d08489df286d5a64d14af45568bd3ba8ed6e54e0b.json  query-7758abd5195003f8c81358a861cbb83cac71724b85beeccd92ce6af5367f424a.json  query-863aba88804575206f49c0b66d4cb049aaa545482838edec3d5a9038d78e0ce4.json  query-9c014aea7a9d0c48ccbff5016cff37fde85014cdfb5c9a96d451d33d5809e5b2.json  query-aa9a4314f69f565f462792ea7caddcafa54527fc0a827db58c8cbe0f060f2014.json  query-b74e6117fed719ac833b51f2510d0ab5130e7086748e165ee843445586d36dbf.json  query-bb5b4be8027d100dbd63d1ecfdb229d15fad925801d6a32976561318f0879004.json  query-c19efb6a7e1fe501d9dd115503a8f0c830516bff97f8f34c8824f855895cd1a9.json  (+2 more)
client/: index.html  (+3 more)
(+75 files in other folders)
