[package]
name = "taqui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono"] }
axum-extra = { version = "0.9.6", features = ["typed-header", "cookie"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
garde = { version = "0.20.0", features = ["serde", "derive", "regex"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
axum-valid = { version = "0.21.0", features = ["full_garde"] }
dotenvy = "0.15.7"
anyhow = "1.0.94"
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.133"
thiserror = "2.0.6"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
time = "0.3.37"
tower-service = "0.3.3"
tower-layer = "0.3.3"
dashmap = "6.1.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
paste = "1.0.15"
async-trait = "0.1.83"
futures-util = "0.3.31"
trait-variant = "0.1.2"